All configuration lifecycle code has been centeralized in configuration manager. ConfigurationManager uses reference counting on starts and loads of a configuration. Configuration load, start, stop, and unload operations are all recursive. Introcuded Dependency type which hold an Artifact and an ImportType (enum of ALL, CLASSES or SERVICES). Environiment only holds a single collection of Dependency types, instead of three collections (import, classes, and references). The only import style artifact has been replaced with import type ALL, and the actual determination of an artifacts ability to contain services is delayed until start time.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/branches/1.1@384686 13f79535-47bb-0310-9956-ffa450edef68